# lib-datalane

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: datalane-error.hpp  datalane-socket.hpp  datalane.hpp
source/: datalane-socket-client.cpp  datalane-socket-client.hpp  datalane-socket-server.cpp  datalane-socket-server.hpp  datalane-socket.cpp  datalane-types.cpp  datalane-types.hpp  datalane.cpp  datalane.hpp  os-namedsocket-win.cpp  os-namedsocket-win.hpp  os-namedsocket.cpp  os-namedsocket.hpp  os-windows-overlapped-manager.cpp  os-windows-overlapped-manager.hpp
source/os/: async_op.cpp  async_op.hpp  error.hpp  semaphore.hpp  tags.hpp  waitable.hpp
source/os/windows/: async_request.cpp  async_request.hpp  named-pipe.cpp  named-pipe.hpp  overlapped.cpp  overlapped.hpp  semaphore.cpp  semaphore.hpp  utility.cpp  utility.hpp  waitable.cpp
tests/: CMakeLists.txt  common.cpp  common.hpp
tests/windows/: CMakeLists.txt
tests/windows/direct-read-write/: CMakeLists.txt  main.cpp
tests/windows/direct-read-write-mt/: CMakeLists.txt  main.cpp
tests/windows/named-pipe/: CMakeLists.txt  main.cpp
tests/windows/named-pipe-process/: CMakeLists.txt  main.cpp
tests/windows/named-pipe-process-cb/: CMakeLists.txt  main.cpp
tools/: compile.bat  configure.bat  environment.bat  package.bat
